Add backend and frontend logic